environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms3-dev
  labels:
    app.kubernetes.io/part-of: ms3
    environment: dev
